--- a/Commander/appsettings.json
+++ b/Commander/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "CommanderConnection": "server=HO-IT-LT04\\SQLEXPRESS;initial catalog=CommanderDB;integrated security=true;"
+  }
 }
